--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 " data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./images/slide1.png" class="d-block w-100" alt="...">
+      <img src="../images/slide1.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./images/slide2.png" class="d-block w-100" alt="...">
+      <img src="../images/slide2.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./images/slide3.png" class="d-block w-100" alt="...">
+      <img src="../images/slide3.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
